deployments/middleware/charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: middleware-deployment
  namespace: graphql-test
spec:
  replicas: 1
  selector:
    matchLabels:
      component: middleware
  template:
    metadata:
      labels:
        component: middleware
    spec:
      containers:
        - name: middleware
          image: graphql-test-middleware:latest
          ports:
            - containerPort: 4000
          resources:
            limits:
              memory: "1G"
              cpu: "500m"
