deployments/middleware/charts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: middleware-service
  namespace: graphql-test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 4000
  selector:
    component: middleware
